deploy/variant-kubernetes/database.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: postgresql
spec:
  restartPolicy: Never
  hostAliases:
#  - ip: "127.0.0.1"
#    hostnames:
#    - "bar.local"
  - ip: "172.17.0.7"
    hostnames:
    - "postgresql"
  containers:
  - name: cat-hosts
    image: busybox
    command:
    - cat
    args:
    - "/etc/hosts"
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgresql
  namespace: mphr
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:10.4
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: metaphotor
      volumes:
        - name: metaphotor
          persistentVolumeClaim:
            claimName: postgresql-pv-claim
