deploy/variant-kubernetes/metaphotor.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mphr
---
apiVersion: v1
kind: Pod
metadata:
  name: metaphotor
spec:
  restartPolicy: Never
  hostAliases:
  - ip: "127.0.0.1"
    hostnames:
    - "metaphotor.info"
  - ip: "172.17.0.7"
    hostnames:
    - "postgresql"
  containers:
  - name: cat-hosts
    image: busybox
    command:
    - cat
    args:
    - "/etc/hosts"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metaphotor
  namespace: mphr
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.8
        ports:
        - containerPort: 80
        volumeMounts:
        - name: docker-sock
          mountPath: /var/run
        - name: nginx-main-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: nginx-uwsgi-conf
          mountPath: /etc/nginx/uwsgi_params
          subPath: uwsgi_params
        - name: metaphotor-src
          mountPath: "/tmp"

      - name: metaphotor
        image: nsavelyeva/metaphotor:latest
        command: ["uwsgi"]
        args: ["--ini", "/etc/uwsgi.ini"]
        volumeMounts:
        - name: metaphotor-src
          mountPath: "/opt/metaphotor"
      volumes:
      - name: metaphotor-src
        persistentVolumeClaim:
          claimName: metaphotor-src-pv-claim
      - name: docker-sock
        hostPath:
          path: /var/run
      - name: nginx-main-conf
        configMap:
          name: nginx-main
      - name: nginx-uwsgi-conf
        configMap:
          name: nginx-uwsgi
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: mphr
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31457
  selector:
    app: nginx
